--- a/presentation/src/main/res/layout/fragment_detect_face.xml
+++ b/presentation/src/main/res/layout/fragment_detect_face.xml
@@ -22,7 +22,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:fontFamily="@font/pretendard_medium"
-            android:textColor="@color/white"
+            android:textColor="@color/textColor3"
             android:textSize="14sp"
             app:detectedFaceCount="@{vm.detectFaceState.component1().component2().size()}"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,15 +44,15 @@
             android:outlineProvider="none"
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
-            android:textColor="@color/gray6"
             android:textSize="12sp"
             app:allSelectBackground="@{false}"
             app:cornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tv_detected_face_count"
-            app:strokeColor="@color/gray2"
+            app:strokeColor="@color/buttonStrokeColor2"
             app:strokeWidth="1dp"
-            tools:backgroundTint="@color/gray1"
+            tools:textColor="@color/textColor2"
+            tools:backgroundTint="@color/buttonBackgroundColor2"
             tools:text="전체 선택" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -79,7 +79,7 @@
             android:layout_marginBottom="21dp"
             android:fontFamily="@font/pretendard_medium"
             android:text="@string/detect_face_text"
-            android:textColor="@color/white"
+            android:textColor="@color/textColor3"
             android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/sd_detect_face"
             app:layout_constraintStart_toStartOf="@+id/tv_detected_face_count" />
@@ -90,6 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:src="@drawable/ic_refresh_24"
+
             app:layout_constraintBottom_toBottomOf="@+id/tv_detect_face"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tv_detect_face" />
